# statguard

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/statguard-core/src/: ast.rs
crates/statguard-io/: Cargo.toml
crates/statguard-io/src/: delta.rs  iceberg.rs  lib.rs
crates/statguard-py/: Cargo.toml
crates/statguard-py/src/: lib.rs
examples/: lakehouse_pipeline.py
python/statguard/: __init__.py  _gpu.py  _pii.py
