[package]
name        = "statguard-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Data ingestion layer for StatGuard (Parquet, Arrow IPC, CSV, JSON, Delta Lake, Iceberg)"

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enable Delta Lake table format support (delta-rs)
delta   = ["dep:deltalake", "dep:tokio"]
# Enable Apache Iceberg table format support
iceberg = ["dep:tokio", "dep:reqwest"]
# Enable both lakehouse formats
lakehouse = ["delta", "iceberg"]

[dependencies]
statguard-core = { path = "../statguard-core" }
polars         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }

# Optional: Delta Lake (delta-rs)
deltalake = { version = "0.22", default-features = false, optional = true }

# Optional: Apache Iceberg (metadata parsing + REST catalog)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"], optional = true }

# Async runtime for Delta + Iceberg (optional, only pulled in with those features)
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
