[package]
name        = "statguard"           # this is the Python module name
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for StatGuard — Rust-native data quality and drift engine"

[lib]
name    = "statguard"
crate-type = ["cdylib"]

[dependencies]
statguard-core    = { path = "../statguard-core" }
statguard-engine  = { path = "../statguard-engine" }
statguard-metrics = { path = "../statguard-metrics" }
statguard-io      = { path = "../statguard-io", features = [] }
pyo3              = { workspace = true }
pyo3-polars       = { workspace = true }
polars            = { workspace = true }
serde_json        = { workspace = true }
